# Collaborative-AGI-Development---Bridging-Architectures-and-Execution

./: CHANGELOG.md  CONTRIBUTING.md  Codette_Governance_Benchmark_Scores.csv  EXEC_SUMMARY.md  LICENSE  Makefile  PARTNER_README.md  READEME.md  README.md  Test Simulation  api test 4  benchmark-ci.yml  config_recovery.yaml  error_recovery2.py  error_recovery3.py  error_recovery_handler.py  eval_utils.py  eval_utilsUpdate2.py  gitignore  pull_request_template.md  pyproject.toml  real API test  requirements-optional.txt  requirements.txt  results_demo.jsonl  run_harness (1).py  run_harnessUpdate2.ts  run_harness_recovery.py  score_results.py  scores_demo.json  security_utils2.py  tasks.jsonl  tasksUpdate.jsonl  trace_schemaBC.yaml  trace_schemaUpdate.yaml  validate_tasks.py  visualization_utils.py
Archive/: README.md  README_ENHANCEDUpdate.md  README_RECOVERY.md  README_REORG.md  README_UPDATED.md  fairness_metrics.py  run_harness.py
